--- a/package.json
+++ b/package.json
@@ -49,8 +49,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@rollup/plugin-babel": "^6.0.4",
     "eslint": "^7.32.0",
-    "msw": "^0.35.0"
+    "msw": "^0.35.0",
+    "rollup": "^4.36.0",
+    "semver": "^7.7.1"
   },
   "engines": {
     "node": "16.19.1",
